crates/xlate/tests/snapshots/golden_matrix__responses__reason_effort_high__o4-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "user",
      "content": "Prove there are infinitely many primes in two lines."
    }
  ],
  "max_tokens": 256,
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
--- headers ---
upstream_streams: true
--- degraded ---
reasoning=dropped
